--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,6 +18,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
@@ -25,11 +29,33 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		 <dependency>
+      		<groupId>com.mysql</groupId>
+      		<artifactId>mysql-connector-j</artifactId>
+      		<scope>runtime</scope>
+    	</dependency>
+    	
+    	<dependency>
+      		<groupId>org.projectlombok</groupId>
+      		<artifactId>lombok</artifactId>
+      		<optional>true</optional>
+    	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>3.2.0</version>
 		</dependency>
 	</dependencies>
 
@@ -38,6 +64,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+		          <excludes>
+		            <exclude>
+		              <groupId>org.projectlombok</groupId>
+		              <artifactId>lombok</artifactId>
+		            </exclude>
+		          </excludes>
+		        </configuration>
 			</plugin>
 		</plugins>
 	</build>
